--- a/index.html
+++ b/index.html
@@ -311,7 +311,15 @@
 						  </div>
 						</div>
 					  </div>
-					  
+					  <div class="col-md-4">
+						<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="height: 500px;background-image: url(images/designThinking.jpg);">
+							<div class="overlay"></div>
+							<div class="text text-center p-4">
+								<h3><a href="#">Talabat App</a></h3>
+								<span>Design Thinking</span>
+							</div>
+						</div>
+					  </div>
 		</section>
 
     <section class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/bg_1.jpg)">
